Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman Ninja vs La Liga Yakuza -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Colegas del Barrio -->
+<li>
+  <a href="../Peliculas/movie168.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/eCgKRs1qMRCc2wx0VG7ONEOj2MJ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Colegas del Barrio 1996</span>
+    <span class="hidden">Ashtray es un joven negro que se va a Los Angeles a vivir con su padre y con su peculiar abuela. Allí se encuentra con su primo Loc Dog, que se pasa el día con su pandilla de amigos por el barrio</span>
+  </a>
+</li>
+<!--FIN--><!-- Batman Ninja vs La Liga Yakuza -->
 <li>
   <a href="../Peliculas/movie167.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
