--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Colegas del Barrio -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Uno de esos dias -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie169.html">
+    <img src="https://image.tmdb.org/t/p/original/7FCcl763dbG6ieiqdKbYBkDzohS.jpg" alt="Uno de esos días" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Uno de esos días</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Los Colegas del Barrio -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie168.html">
     <img src="https://image.tmdb.org/t/p/original/eCgKRs1qMRCc2wx0VG7ONEOj2MJ.jpg" alt="Los Colegas del Barrio" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
