--- a/Plataforma/sony/index.html
+++ b/Plataforma/sony/index.html
@@ -216,7 +216,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Anaconda 2: En busca de la orquidea sangrienta -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Uno de esos dias -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie169.html">
+    <img src="https://image.tmdb.org/t/p/original/7FCcl763dbG6ieiqdKbYBkDzohS.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Uno de esos días</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Anaconda 2: En busca de la orquidea sangrienta -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie156.html">
     <img src="https://image.tmdb.org/t/p/original/sO7PK08LkIXluGjqFvvU1jWjmVV.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
