Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Colegas del Barrio -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Uno de esos dias -->
+<li>
+  <a href="../Peliculas/movie169.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7FCcl763dbG6ieiqdKbYBkDzohS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Uno de esos días 2025</span>
+    <span class="hidden">Cuando Dreux y Alyssa, mejores amigas y compañeras de piso, descubren que el novio de Alyssa ha malgastado el dinero del alquiler, el dúo se ve abocado a una carrera contrarreloj para evitar el desahucio y mantener intacta su amistad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Colegas del Barrio -->
 <li>
   <a href="../Peliculas/movie168.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
