Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Uno de esos dias -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Respira -->
+<li>
+  <a href="../Peliculas/movie170.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/oujEGO5eXnP8PsFRPJHZfUzlKFK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Respira 2024</span>
+    <span class="hidden">El suministro de aire escasea en el futuro cercano, obligando a una madre e hija a luchar por sobrevivir cuando dos extraños llegan desesperados por un refugio oxigenado.</span>
+  </a>
+</li>
+<!--FIN--><!-- Uno de esos dias -->
 <li>
   <a href="../Peliculas/movie169.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
